SFDCProject/src/objects/Service_Contract_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Expected__c</fullName>
        <label>Amount Expected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Paid__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_To__c</fullName>
        <label>Payment To</label>
        <picklist>
            <controllingField>Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Install Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Orginization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Service Contract Activities</relationshipLabel>
        <relationshipName>Service_Contract_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Service Contract Activities</relationshipLabel>
        <relationshipName>Service_Contract_Activities_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO M1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO M2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO M3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Upfront</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Deposit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Milestone Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upfront Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Origination Fee 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cust Origination Fee 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Service Contract Activity</label>
    <nameField>
        <displayFormat>SCA{00000000}</displayFormat>
        <label>Service Contract Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Contract Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>